# Deep3DRadon

./: .gitignore  CMakeLists.txt  README.md  config.json
documentation/: elastic lattice distortion.md
source/: snippets
source/inc/: atom.h  config_handler.h  crystal.h  detector.h  k_lines.h  local_radon_box.h  microscope.h  orientation.h  pattern.h  projector.h  radon_transform.h  reflector.h  source_point.h  unit_cell.h
source/src/: config_handler.cpp  crystal.cpp  detector.cpp  dev_test.cpp  k_lines.cpp  local_radon_box.cpp  main.cpp  microscope.cpp  orientation.cpp  pattern.cpp  projector.cpp  radon_transform.cpp  unit_cell.cpp
